Fixing image preview on safari mobile

--- a/src/app/modules/composer/components/preview/preview.component.scss
+++ b/src/app/modules/composer/components/preview/preview.component.scss
@@ -2,13 +2,6 @@
   position: relative;
   width: 100%;
   height: 330px;
-  @media screen and (max-width: $max-mobile) {
-    height: auto;
-  }
-
-  @include m-theme() {
-    background-color: themed($m-bgColor--primary);
-  }
 
   // &.m-composer__preview--portrait {
   //   height: 383px;
